--- a/style.css
+++ b/style.css
@@ -750,8 +750,8 @@ main .preNew {
             /* font-size: clamp(0.25em, .25vw + 0.5em, 1em); */
         }
         100% {
-            width: clamp(50vw, 30vw + 200px, 350px);
-            height: clamp(70vh, 15vh + 200px, 80vh);
+            /* width: clamp(50vw, 30vw + 200px, 350px);
+            height: clamp(70vh, 15vh + 200px, 80vh); */
             transform: translateX(-125vw);
             opacity: 100%;
             border: 3px solid black;
@@ -789,8 +789,8 @@ main .preNew {
             /* font-size: clamp(0.25em, .25vw + 0.5em, 1em); */
         }
         100% {
-            width: clamp(50vw, 30vw + 200px, 350px);
-            height: clamp(70vh, 15vh + 200px, 80vh);
+            /* width: clamp(50vw, 30vw + 200px, 350px);
+            height: clamp(70vh, 15vh + 200px, 80vh); */
             transform: translateX(125vw);
             opacity: 100%;
             border: 3px solid black;
