--- a/style.css
+++ b/style.css
@@ -907,6 +907,18 @@ main .preNew {
 
 @media screen and (max-width: 600px) {
 
+    .postLeft, .preRight {
+        font-size: clamp(0.8em, 1vw + 0.35em, 1.4em) !important;
+    }
+
+    .smEntry .entryInterior .top h2:nth-of-type(1), .smEntry .entryInterior .top h2:nth-of-type(2) {
+        font-size: clamp(0.75em, 0.75vw + 0.85em, 1.5em) !important;
+    }
+
+    .smEntry .entryInterior .bottom {
+        font-size: clamp(0.5em, 0.5vw + 0.45em, 1.5em) !important;
+    }
+
     .table table {
         width: 100%;
     }
