--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 body {
     background-color: var(--dark);
     font-family: Futura,Trebuchet MS,Arial,sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 footer div {
